[package]
name = "nix-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
export-nix.path = "../export-nix"
json5 = "1.3.1"
nix-types.path = "../nix-types"
serde_json = "1.0.149"

[package.metadata]
nix-exports = ["toJSON", "fromJSON", "toJSON5", "fromJSON5"]
