[package]
name = "nix-toml"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nix-types.path = "../nix-types"
export-nix.path = "../export-nix"
toml = "1.0.6"
serde = "1.0.228"

[package.metadata]
nix-exports = ["toTOML", "toTOMLValue", "fromTOML", "fromTOMLValue"]
