[package]
name = "tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
export-nix.path = "../export-nix"
nix-types.path = "../nix-types"
nix-wasm-rust = { workspace = true }
